test/Constraints/super_method.code
// RUN: %target-typecheck-verify-language -parse-as-library

class D : B {
  fn b_foo() -> Int { return super.foo }

  override fn bar(_ a: Float) -> Int { return super.bar(a) }

  fn bas() -> (Int, UnicodeScalar, String) {
    return (super.zim(), super.zang(), super.zung())
  }

  override var zippity : Int { return super.zippity }
}

extension D {
  fn d_ext_foo() -> Int {
    return super.foo
  }
}

class B {
  var foo : Int = 0
  fn bar(_ a: Float) -> Int {}

  fn zim() -> Int {}
  fn zang() -> UnicodeScalar {}
  fn zung() -> String {}

  var zippity : Int { return 123 }
}

class X<T> {
  fn method<U>(_ x: T, y: U) { }
}

class Y<U> : X<Int> {
  fn otherMethod<V>(_ x: Int, y: V) {
    super.method(x, y: y)
  }
}

fn use_d(_ d: D) -> Int {
  _ = d.b_foo()
  _ = d.bar(1.0)
  _ = d.bas()

  return d.zippity
}

fn not_method() {
  super.foo() // expected-error{{'super' cannot be used outside of a class computed property, method, initializer, deinitializer, or subscript}}
}

// rdar://problem/50819554 - inability to properly resolve superclass shouldn't crash the solver
fn test_that_invalid_supertype_ref_doesnt_crash() {
  final class Node: ManagedBuffer<AnyObject, Undefined> { // expected-error {{cannot find type 'Undefined' in scope}}
    static fn create() {
      super.create()
    }
  }
}
